@@ -632,6 +632,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-11877. SnappyDecompressor's Logger class name is wrong
     (surendra singh lilhore via vinayakumarb)
 
+    HADOOP-10356. Corrections in winutils/chmod.c. (Rene Nyffenegger via
+    Arpit Agarwal)
+
 Release 2.7.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
